--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="nav-link" href="#">Los oradores</a>
                 <a class="nav-link" href="#">El lugar y la fecha</a>
                 <a class="nav-link disabled">Conviertete en orador</a>
-                <a class="nav-link disabled text-success">Comprar tickets</a>
+                <a class="nav-link disabled text-success" href="./JS/eventos.html">Comprar tickets</a>
               </div>
             </div>
           </nav>
@@ -43,7 +43,9 @@
                       <p>Bs As llega por primera vez a la Argentina. Un evento para compartir con nuestra comunidad el conocimiento y la experiencia de expertos...</p>
                      <div>
                       <button class="bg-transparent">Quiero ser orador </button>
+                      <a href="./JS/eventos.html">
                        <button class="bg-success">Comprar tickets</button>
+                      </a>
                      </div>
                     </div>
                   </div>
@@ -54,7 +56,9 @@
                       <p>Bs As llega por primera vez a la Argentina. Un evento para compartir con nuestra comunidad el conocimiento y la experiencia de expertos...</p>
                       <div>
                         <button class="bg-transparent">Quiero ser orador</button>
-                        <button class="bg-success">Comprar tickets</button>
+                        <a href="./JS/eventos.html">
+                          <button class="bg-success">Comprar tickets</button>
+                        </a>
                       </div>  
                     </div>  
                   </div>
@@ -65,7 +69,9 @@
                        <p>Bs As llega por primera vez a la Argentina. Un evento para compartir con nuestra comunidad el conocimiento y la experiencia de expertos...</p>
                        <div>
                         <button class="bg-transparent">Quiero ser orador</button>
-                        <button class="bg-success">Comprar tickets</button>
+                        <a href="./JS/eventos.html">
+                          <button class="bg-success">Comprar tickets</button>
+                        </a>
                       </div>
                     </div>
                   </div>
